--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "express-validator": "^6.3.0",
     "mongodb": "^3.3.5",
     "mongoose": "^5.7.13",
     "nodemailer": "^6.4.1",
