--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-validator": "^6.3.0",
     "mongodb": "^3.3.5",
     "mongoose": "^5.7.13",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.1",
     "nodemailer-sendgrid-transport": "^0.2.0"
   }
