--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^5.7.13",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.1",
-    "nodemailer-sendgrid-transport": "^0.2.0"
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "pdfkit": "^0.11.0"
   }
 }
